refactored functions into different files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,17 @@
 cmake_minimum_required (VERSION 3.0)
 
-project ("OpenCV-Camera-Calibration")
+project ("FYP-Logic-CPP")
 
 set (MAIN_SOURCE "./main.cpp")
+set (COORDINATE_CLASS_SOURCE "./Coordinate.cpp")
+set (LINE_CLASSS_SOURCE "./Line.cpp")
+set (VECTOR_CLASS_SOURCE "./Vector.cpp")
+set (CORNER_CLASS_SOURCE "./Corner.cpp")
+set (PUCK_CLASS_SOURCE "./Puck.cpp")
+set (AIR_HOCKEY_TABLE_CLASS_SOURCE "./AirHockeyTable.cpp")
+set (MAT_DRAW_FUNCTIONS_CLASS_SOURCE "./MatDrawFunctions.cpp")
 
-set (OPENCV_CALIB_BIN "opencv-calib-camera")
+set (PROJ_BIN_LABEL "fyp-logic-exe")
 
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
@@ -19,14 +26,24 @@ set (CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH};${V4L2_HELPER_LIB_INSTALL_PATH}
 set (GCC_COMPILE_FLAGS -Wall -Wpedantic -Wextra -O3 -Wshadow -std=c++11 -g)
 add_compile_options (${GCC_COMPILE_FLAGS})
 
-add_executable (${OPENCV_CALIB_BIN} ${MAIN_SOURCE})
-target_include_directories (${OPENCV_CALIB_BIN} PUBLIC ${V4L2_HELPER_LIB_INCLUDE_DIR})
-target_link_libraries (${OPENCV_CALIB_BIN} v4l2_helper)
-target_link_libraries (${OPENCV_CALIB_BIN} ${OpenCV_LIBS})
+add_executable (
+    ${PROJ_BIN_LABEL} 
+    ${MAIN_SOURCE} 
+    ${COORDINATE_CLASS_SOURCE} 
+    ${LINE_CLASSS_SOURCE} 
+    ${VECTOR_CLASS_SOURCE} 
+    ${CORNER_CLASS_SOURCE} 
+    ${PUCK_CLASS_SOURCE} 
+    ${AIR_HOCKEY_TABLE_CLASS_SOURCE} 
+    ${MAT_DRAW_FUNCTIONS_CLASS_SOURCE}
+)
+target_include_directories (${PROJ_BIN_LABEL} PUBLIC ${V4L2_HELPER_LIB_INCLUDE_DIR})
+target_link_libraries (${PROJ_BIN_LABEL} v4l2_helper)
+target_link_libraries (${PROJ_BIN_LABEL} ${OpenCV_LIBS})
 
 install (
 	TARGETS
-	${OPENCV_CALIB_BIN}
+	${PROJ_BIN_LABEL}
 	RUNTIME DESTINATION bin
 )
 
